# example-python-research-package

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: continuous-integration.md  development-workflow.md  how-to-write-a-readme.md  understanding-pyproject-toml.md  why-package-research-code.md
src/example_python_research_package/: __init__.py  example.py
tests/: __init__.py  test_example.py
