[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "example-python-research-package"
version = "0.1.0"
description = "A minimal example of a properly packaged Python research project"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  { name = "Helen Abbott", email = "h.e.abbott.1@bham.ac.uk" }
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ""
